cabal-version:  >= 1.2

name:           ff-gtk
version:        0

build-type:     Simple

executable ff-gtk
    build-depends:
        -- global
        base,
        gi-gtk,
        gi-gtk-declarative,
        gi-gtk-declarative-app-simple,
        lens,
        text,
        vector
    default-language: Haskell2010
    ghc-options: -threaded
    main-is: Main.hs
